# cross-platform-swift

./: .gitmodules  Package.swift  README.md
Sources/CInterop/: primitives.c  structs.c
Sources/CInterop/include/: primitives.h  structs.h
Sources/SimpleABI/: SimpleABI.swift
Sources/SimpleABIConsumer_C/: consumer.c  main.c
Sources/SimpleABIConsumer_C/include/: simple_abi.h
Sources/SubjectStreams/: CurrentValueStream.swift  PassthroughStream.swift  SubjectStream.swift
Tests/CInteropTests/: CInteropTests.swift
Tests/SubjectStreamsTests/: SubjectStreamsTests.swift
simple-android-app/: README.md  settings.gradle.kts
simple-android-app/app/: build.gradle.kts
simple-android-app/app/src/main/: AndroidManifest.xml
simple-android-app/app/src/main/cpp/: CMakeLists.txt  simple-library  wrapper.c
simple-android-app/app/src/main/java/com/davidederosa/cps/simpleandroidapp/: MainActivity.kt  SimpleLibraryWrapper.kt
simple-android-app/app/src/main/res/values/: themes.xml
simple-android-app/gradle/: libs.versions.toml
simple-android-app/gradle/wrapper/: gradle-wrapper.properties
simple-apple-app/: Package.swift
simple-apple-app/Sources/SimpleApp/: ContentView.swift  SimpleApp.swift
simple-library/: CMakeLists.txt  Package.swift  simple-library.h
simple-library/Sources/SimpleLibrary/: Greeting.swift  Greeting_C.swift  SimpleLibrary.swift
